--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,20 +1,25 @@
+body {
+font-family: Verdana;
+background-color: black;
+text-align: center;
+}
 h1 {
-  font-family: Verdana;
   font-size: 50px;
   color: white;
-  text-align: center;
 }
 a {
   color: Aquamarine;
   font-size: 16px;
 }
 h2 {
-font-family: Verdana;
 font-size: 42px;
 font-weight: 300;
+color: white;
 }
-h3  {
-font-family: Verdana;
+h3 {
 font-size: 21px;
 color: Gray;
+}
+footer {
+text-align: right;
 }
